# ShaderEditor

./: .gitignore  Cargo.toml  ShaderEditor.cs  ShaderEditor.csproj  build.rs
Properties/: AssemblyInfo.cs
src/: lib.rs  shaders.rs
