[package]
name = "shadereditor_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
"detour" = "0.8.1"
"winapi" = { version = "0.3.9", features = ["winuser", "std", "libloaderapi", "d3d11"] }